--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -156,6 +156,19 @@ body{
     font-size : 1.5em;
 }
 
+
+.primary-partner, .sec-partner {
+    display: inline-block;
+    
+    margin: auto;
+}
+
+.pp-logo{
+    width:80px;
+    height:100%;  
+    margin:10px;
+}
+
 /*SECTION*/
 
 #partners {
