--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -122,6 +122,7 @@ body{
 
  #ember{
     margin: auto;
+    margin-bottom: 50px;
     height: 460px;
     
 }
@@ -141,7 +142,7 @@ body{
 .panel {
     width: 95%;
     height: 100%;
-    background-color: red;
+    background-color: #fff;
     margin-top:50px;
     border-radius:5px;
     padding: 20px;
@@ -160,6 +161,7 @@ body{
 .primary-partner, .sec-partner {
     display: inline-block;
     
+    
     margin: auto;
 }
 
@@ -172,7 +174,7 @@ body{
 /*SECTION*/
 
 #partners {
-    height: 300px;
+    
     background-color: blue;
 }
 
@@ -181,6 +183,31 @@ section .col-md-6 p{
 
 }
 
+
+#partners  {
+    text-align: center;
+    color: grey;
+    padding: 0;
+}
+
+
+.arguments {
+    height: 360px;
+    padding: 0;
+}
+
+.arguments-illu img{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#couple {
+    background-image: url('../img/couple.jpg');
+    background-size : cover;
+    padding: 0;
+}
 
 /*PROVISOIRE*/
 
