--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -174,25 +174,34 @@ body{
     margin:10px;
 }
 
-/*SECTION*/
-
-#partners {
-    
-    background-color #fff;
-}
-
-section .col-md-6 p{
-    color: black;
-
-}
-
-
 #partners  {
     text-align: center;
     color: grey;
     padding: 0;
 }
 
+
+#partners {
+    
+    background-color #fff;
+}
+
+/*SECTION*/
+
+
+
+section .col-md-6 p{
+    color: black;
+
+}
+
+#slogan {
+    text-align: center;
+}
+
+h1,h2 {
+    font-weight: 900;
+}
 .arguments {
     height: 400px;
     padding: 0;
@@ -202,8 +211,18 @@ section .col-md-6 p{
     height: 100%;   
 }
 
-#couple {
+#first-line {
     background-image: url('../img/couple.jpg');
+    background-size : cover;
+}
+
+#second-line {
+    background-image: url('../img/high-speed-train.jpg');
+    background-size : cover;
+}
+
+#third-line {
+    background-image: url('../img/rails.jpg');
     background-size : cover;
 }
 
@@ -215,9 +234,13 @@ section .col-md-6 p{
 
 .text {
     height: 100%;
+    padding-top: 100px;
+    text-align: center;
   
 
 }
+
+
 
 /*PROVISOIRE*/
 
