--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -1,13 +1,44 @@
 /*TEMP STYLES*/
 
+.container {
+    border: 2px solid violet;
+}
+
+.col-md-6 {
+    border: 1px solid blue;
+}
+
+.col-md-10 {
+    border: 1px solid green;
+}
+
+.col-md-3 {
+    border: 1px solid yellow;
+}
+
 
 /*GENERAL STYLES*/
 
+body{
+    
+    font-family: 'Source Sans Pro', sans-serif;
+    
+}
 
-/*NAVBAR*/
+body{
+    text-align: center;
+}
+
 
 
 /*BOOKING*/
+
+            /*NAVBAR*/
+
+.navigation {
+    background-color: rgba(33,49,77,.8);
+
+}
 
 
 /*PARTNERS*/
