--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -16,6 +16,10 @@
     border: 1px solid yellow;
 }
 
+.col-md-12 {
+    border: 1px solid orange;
+}
+
 
 /*GENERAL STYLES*/
 
@@ -40,6 +44,10 @@ body{
 
 }
 
+
+#booking .btn-group button{
+    padding-left : 0;
+}
 
 /*PARTNERS*/
 
