--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -56,13 +56,38 @@ body{
 
 
 
+
+
 /*BOOKING*/
 
-            /*NAVBAR*/
+
+#booking{
+    background-image: url('../img/train-bg.jpg');
+    background-size: cover;
+}
+
+/*NAVBAR*/
 
 .navigation {
     background-color: rgba(33,49,77,.8);
+    height: 60px;
 
+}
+
+.navigation-item{
+    height: 100%;
+}
+
+#header-logo {
+    height: auto; 
+    width: auto; 
+    max-width: 100px; 
+    max-height: 100px;
+}
+
+.navigation ul li{
+    list-style-type: none;
+    display: inline-block; 
 }
 
 
