--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -38,6 +38,8 @@ footer div {
 }
 
 
+
+
 /*GENERAL STYLES*/
 
 body{
@@ -64,6 +66,8 @@ body{
 #booking{
     background-image: url('../img/train-bg.jpg');
     background-size: cover;
+    height: 800px;
+    color:#fff;
 }
 
 /*NAVBAR*/
@@ -74,8 +78,33 @@ body{
 
 }
 
+.navigation .container, .navigation .col-md-4, .navigation .col-md-6 {
+    height: 100%;
+    padding-left:0;
+}
 .navigation-item{
     height: 100%;
+    
+    
+}
+
+.navigation-item div{
+    height: 100%;
+}
+
+.navigation-item img{
+    border:1px solid #fff;
+    border-radius :5px;
+}
+
+.navigation-item p {
+    display: inline-block;
+    height: 20px;
+   
+}
+
+.currency{
+    border: 3px solid green;
 }
 
 #header-logo {
@@ -83,16 +112,41 @@ body{
     width: auto; 
     max-width: 100px; 
     max-height: 100px;
+   
 }
+
+
+
+
 
 .navigation ul li{
     list-style-type: none;
     display: inline-block; 
+    height: 100%
 }
 
 
 #booking .btn-group button{
     padding-left : 0;
+}
+
+
+.panels{
+    height: 500px;
+    background-color: #fff;
+    color:grey;
+    margin-bottom:30px;
+}
+.partner-p{
+    width:90%;
+    height: 110px;
+    padding:10px;
+    margin: auto;
+    background-color: #fff;
+    border-radius: 5px 5px 0 0;
+    color:grey;
+   
+    
 }
 
 /*PARTNERS*/
@@ -110,6 +164,7 @@ body{
 }
 .pp-logo  {
     border: 1px solid black;
+    max-height: 40px;
    
     width : 120px;
     height: 100%;
@@ -118,9 +173,14 @@ body{
 
 .sp-logo  {
     border: 1px solid #E34242;
-    height: 100%;
+    max-height: 20px;
    
-    width : 100px;
+    width: 100px;
+    
+}
+
+.pp-logo{
+    
     
 }
 
@@ -155,6 +215,17 @@ body{
 
 
 /*GET-ONBOARD*/
+
+#get-onboard .container-fluid {
+    height: 266px;
+    background-color: #3F618C;
+    color: #fff;
+    padding-top:50px;
+}
+
+#get-onboard .container-fluid h2 {
+    font-weight: 900;
+}
 
 
 
