--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -258,7 +258,7 @@ body{
 
 /*HOW-TO*/
 
-#how-to{
+#how-to, #get-onboard {
     background-image: url('../img/dots-pattern.png')
 }
 
@@ -316,10 +316,25 @@ body{
     font-weight: 900;
 }
 
+#get-onboard button{
+    margin-top: 20px;
+    font-size: 16px;
+    font-weight: 600;
+    border: 1px solid #01C3A7;
+    color: #FFF;
+    background-color: #01C3A7;
+    border-bottom: 1px solid #01907c;
+    box-shadow: 0 1px 1px -1px #8C9DA1;
+}
+
 
 
 
 /*FEEDBACK*/
+
+#feedback {
+    background-color: #F5F6F7;
+}
 
 #feedback li{
     display : inline-block;
@@ -334,7 +349,10 @@ body{
     opacity: 0.5;
     
 }
-i
+
+.twitter-tweet {
+background-color: #fff;   
+}
 /*FOOTER*/
 
 footer ul{
