--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -1,45 +1,3 @@
-/*TEMP STYLES*/
-
-.container-fluid, .container {
-    border-collapse: collapse;
-}
-.container-fluid {
-    border: 2px solid darkred;
-}
-.container {
-    border: 2px solid violet;
-}
-
-.col-md-6 {
-    border: 1px solid blue;
-}
-
-.col-md-10 {
-    border: 1px solid green;
-}
-
-.col-md-3 {
-    border: 1px solid yellow;
-}
-
-.col-md-12 {
-    border: 1px solid orange;
-}
-
-.col-md-2 {
-    border: 1px solid tomato;
-}
-.col-md-4 {
-    border: 1px solid orangered;
-}
-
-.col-md-5{
-    border: 1px solid darkcyan;
-}
-
-footer div {
-    border: 0.5px dotted lightslategray;
-}
 
 
 
@@ -139,7 +97,7 @@ body{
     height: 500px;
     
     color:grey;
-    margin-bottom:30px;
+    margin-bottom:50px;
     padding-top :30px;
 
     display: flex;
@@ -155,6 +113,7 @@ body{
     height: 450px;
     width: 40%;
     margin: auto;
+   
 }
 
 .panel-right {
@@ -165,11 +124,14 @@ body{
 .partner-p{
     width:90%;
     height: 110px;
-    padding:10px;
+    padding:5px 10px 0 10px;
+
+ 
     margin: auto;
     background-color: #fff;
     border-radius: 10px 10px 0 0;
     color:grey;
+   
      
 }
 
@@ -179,15 +141,18 @@ body{
     justify-content: flex-start;
     align-items: center;
     list-style-type: none;
+    
 }
 
 #booking .panels li {
-    border: 1px solid green;
-    width : 90%;
+   
+    width : 95%;
+    height: 85px;
     padding: 10px;
     margin-left : 0; 
     margin: auto;
     margin-bottom: 10px;
+    text-align: left;
 }
 
 #booking .panel-right ul {
@@ -209,6 +174,7 @@ body{
     padding: 10px;
     margin: 0;
     border-radius : 10px 10px 0 0 ;
+    ;
     
 }
 
@@ -216,6 +182,7 @@ body{
     background-color: #20304B;
     background-repeat: no-repeat;
     background-position: center;
+    min-width: 50px;
     
     
 }
@@ -254,7 +221,23 @@ body{
     max-height: auto;
 }
 
+.em-text {
+    color: #01C3A7;
+    font-weight: 600;
+}
 
+#booking .panel-right li {
+    font-size: 17px;
+    line-height: 1.4em;
+    display: table-row;
+    min-height: 33%;
+}
+
+
+#booking .panel-right li .col-md-12 {
+    padding:30px 0 0 0; 
+
+}
 /*PARTNERS*/
 
 .primary-partners, .secondary-partners {
@@ -368,7 +351,7 @@ body{
     max-width: 100px;
     margin: auto;
    
-    border: 1px solid blue;
+    
     
 }
 
