--- a/deliveroo/css/style.css
+++ b/deliveroo/css/style.css
@@ -1,53 +1,40 @@
 
 
-/*TEMP*/
 
-.container{
-    border: 1px solid #0033FF;
-}
+/** body**/
+body { font-family: "adelle",sans-serif;
 
-.col-md-12{
-
-    border: 1px solid #00FF05;
 
 }
-
-.container-fluid{
-    border: 1px solid #800F00;
-}
-
-.col-md-6{
-    
-        border: 1px solid pink;
-    
-    }
-.col-md-4 {
-
-    border: 1px solid brown;
-}
-
-.col-md-3 {
-    
-        border: 1px solid #4D185C;
-    }
-.col-md-8 {
-        
-            border: 1px solid #C27B1C;
-        }
-        
-.col-md-2{border: 1px solid rgba(16, 216, 209, 0.89);}
 /**header**/
 .bandeau {height: 20px;
-         };
+         }
 
-.part1D{ background-image: url('../img/pasta-wide.jpg');
-         background-size:;
+.part1D .col-md-6{ background-image:url("pasta-wide.jpg");
+                   background-image: linear-gradient(96deg, #00ccbc 14%, transparent 14.04%); 
+         
 
 }
-.part1G{ background-color:#00ccbc };
+.part1G{ background-color:#00ccbc;
+         color:white;
+         text-align: left; 
+         font-family: "stratos",sans-serif;
+         
+        
+        }
+.part1G h1 {font-size: 40px;
 
-/**a la carte**/
-.aLaCarte{display: block;
 
-
+}
+    
+/**a la carte appliquer font + resize img **/
+.row {display: block;
+}
+.descIma{ 
+           text-align: center;
+           
+           
+}
+.imagCart4 .imagCart8{     overflow:auto;
+                
 }
