--- a/trainline/css/style.css
+++ b/trainline/css/style.css
@@ -1,5 +1,10 @@
 
-
+#hugo{
+    font-size:4em;
+    color:red;
+    text-transform: uppercase;
+    background-color:blue;
+}
 
 
 /*GENERAL STYLES*/
